--- a/GasStation/Properties/Resources.resx
+++ b/GasStation/Properties/Resources.resx
@@ -148,4 +148,7 @@
   <data name="spiffygif" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\spiffygif.gif;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="roseBK" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\roseBK.jpg;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
